# attestation

./: .cruft.json  .yamllint.yml  CHANGELOG.md  Cargo.toml  README.md  deny.toml
.cargo/: audit.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/: CODEOWNERS  auto_assign.yaml  dependabot.yaml  labeler.yaml  labeler.yml  settings.yml
.github/workflows/: cargo-audit.yaml  ci.yaml  copyright.yaml  issues.yaml  pr-assign.yaml  pr.yaml
verifier/: Cargo.toml  README.md
verifier/data/tests/: README.md  example_qe_identity.json  example_tcb.json  fmspc_00906ED50000_2023_05_10.json  fmspc_00906ED50000_2023_07_12.json  intermediate_ca.pem  leaf_cert.pem  processor_crl.pem  qe_identity.json  root_crl.pem
verifier/data/tests/pub_keys/: README.md  p256_key_1.pem  p256_key_2.pem  p256_key_3.pem  rsa_key_1.pem  rsa_key_2.pem  rsa_key_3.pem
verifier/src/: advisories.rs  certificate_chain.rs  certs.rs  error.rs  evidence.rs  identity.rs  lib.rs  mbedtls.rs  qe_identity.rs  qe_report_body.rs  quote.rs  quote_enclave_identity.rs  report_body.rs  struct_name.rs  tcb.rs  x509.rs
verifier/src/x509/: algorithm.rs  certs.rs  chain.rs  crl.rs  error.rs  name.rs  rfc4518.rs  tcb.rs
verifier/tests/: pkits-4-1.rs  pkits-4-2.rs  pkits-4-3.rs
verifier/tests/common/: mod.rs
verifier/tests/data/: README.md
verifier/tests/data/pkits/: README.md
