[workspace]
members = [
    "verifier",
]

# We need to explicitly specify resolver 2.
# We shouldn't have to per https://doc.rust-lang.org/edition-guide/rust-2021/default-cargo-resolver.html, but that does not appear to be the case
resolver = "2"

[workspace.package]
authors = ["MobileCoin"]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/mobilecoinfoundation/attestation"
rust-version = "1.68"

[profile.release]
lto = "thin"

[patch.crates-io]
# mbedtls patched to allow certificate verification with a profile
mbedtls = { git = "https://github.com/mobilecoinfoundation/rust-mbedtls.git", rev = "0bddacc981ac782ca2e2f8aa5ffa25ce0e3d8273" }
mbedtls-sys-auto = { git = "https://github.com/mobilecoinfoundation/rust-mbedtls.git", rev = "0bddacc981ac782ca2e2f8aa5ffa25ce0e3d8273" }

[workspace.metadata.release]
shared-version = true
dev-version-ext = "beta.0"
consolidate-commits = true
consolidate-pushes = true
tag-name = "v{{version}}"
pre-release-replacements = [
    # Files listed here must exist in all crates in this workspace
    { file = "README.md", search = "mc-attestation-[a-z-]+/[0-9.]+", replace = "{{crate_name}}/{{version}}" },
]
