[package]
name = "mc-attestation-verifier"
version = "0.1.0"
authors = { workspace = true }
# See https://crates.io/category_slugs for valid categories
categories = ["authentication", "no-std", "no-std::no-alloc"]
description = "SGX Enclave Attestation Report Verification"
edition = { workspace = true }
# See https://crates.io/keywords for the common keywords
keywords = ["no-std", "security"]
license = { workspace = true }
readme = "README.md"
repository = { workspace = true }
rust-version = { workspace = true }

[features]
alloc = ["pem-rfc7468/alloc", "dep:const-oid", "dep:p256", "dep:x509-cert", "tcb"]
tcb = ["dep:p256", "dep:serde_json", "dep:serde", "dep:der", "dep:hex"]

[dependencies]
const-oid = { version = "0.9.2", default-features = false, optional = true }
der = { version = "0.7.5", default-features = false, optional = true }
displaydoc = { version = "0.2.1", default-features = false }
hex = { version = "0.4.3", default-features = false, features = ["serde", "alloc"], optional = true }
mc-sgx-core-types = "0.6.0"
p256 = { version = "0.13.0", default-features = false, features = ["ecdsa"], optional = true }
pem-rfc7468 = { version = "0.7.0", default-features = false, optional = true }
serde = { version = "1.0.162", default-features = false, features = ["derive"], optional = true }
serde_json = { version = "1.0.66", default-features = false, features = ["alloc", "raw_value"], optional = true }
subtle = { version = "2.4.0", default-features = false }
x509-cert = { version = "0.2.0", default-features = false, optional = true }

[dev-dependencies]
mc-sgx-core-sys-types = "0.6.0"
textwrap = "0.16.0"
x509-cert = { version = "0.2.0", default-features = false, features = ["pem"] }
yare = "1.0.2"

# At least one crate must have this configuration
[package.metadata.release]
pre-release-replacements = [
    { file = "../../CHANGELOG.md", search = "Unreleased", replace = "{{version}}", min = 1 },
    { file = "../../CHANGELOG.md", search = "\\.\\.\\.HEAD", replace="...{{tag_name}}", exactly = 1 },
    { file = "../../CHANGELOG.md", search = "ReleaseDate", replace= "{{date}}", min = 1 },
    { file = "../../CHANGELOG.md", search = "<!-- next-header -->", replace="<!-- next-header -->\n## [Unreleased] - ReleaseDate\n", exactly = 1 },
    { file = "../../CHANGELOG.md", search = "<!-- next-url -->", replace="<!-- next-url -->\n[Unreleased]: https://github.com/mobilecoinfoundation/attestation/compare/{{tag_name}}...HEAD", exactly = 1 },
]
