[package]
name = "mc-attestation-verifier"
version = "0.1.0"
authors = { workspace = true }
# See https://crates.io/category_slugs for valid categories
categories = ["authentication", "no-std", "no-std::no-alloc"]
description = "SGX Enclave Attestation Report Verification"
edition = { workspace = true }
# See https://crates.io/keywords for the common keywords
keywords = ["no-std", "security"]
license = { workspace = true }
readme = "README.md"
repository = { workspace = true }
rust-version = { workspace = true }

[features]
tcb = ["dep:serde_json", "dep:serde", "dep:der", "dep:hex", "mc-sgx-dcap-types/tcb", "x509-cert/pem"]
x509 = ["dep:mbedtls", "x509-cert"]

[dependencies]
der = { version = "0.7.5", default-features = false, optional = true }
displaydoc = { version = "0.2.1", default-features = false }
hex = { version = "0.4.3", default-features = false, features = ["serde", "alloc"], optional = true }
mbedtls = { version = "0.8.1", default-features = false, features = ["no_std_deps"], optional = true }
mc-sgx-core-types = "0.6.1"
mc-sgx-dcap-types = "0.6.1"
p256 = { version = "0.13.0", default-features = false, features = ["ecdsa"] }
serde = { version = "1.0.162", default-features = false, features = ["derive"], optional = true }
serde_json = { version = "1.0.66", default-features = false, features = ["alloc", "raw_value"], optional = true }
subtle = { version = "2.4.0", default-features = false }
x509-cert = { version = "0.2.0", default-features = false, optional = true }

[dev-dependencies]
mc-sgx-core-sys-types = "0.6.1"
mc-sgx-dcap-sys-types = "0.6.1"
textwrap = "0.16.0"
x509-cert = { version = "0.2.0", default-features = false, features = ["pem"] }
yare = "1.0.2"

# At least one crate must have this configuration
[package.metadata.release]
pre-release-replacements = [
    { file = "../../CHANGELOG.md", search = "Unreleased", replace = "{{version}}", min = 1 },
    { file = "../../CHANGELOG.md", search = "\\.\\.\\.HEAD", replace="...{{tag_name}}", exactly = 1 },
    { file = "../../CHANGELOG.md", search = "ReleaseDate", replace= "{{date}}", min = 1 },
    { file = "../../CHANGELOG.md", search = "<!-- next-header -->", replace="<!-- next-header -->\n## [Unreleased] - ReleaseDate\n", exactly = 1 },
    { file = "../../CHANGELOG.md", search = "<!-- next-url -->", replace="<!-- next-url -->\n[Unreleased]: https://github.com/mobilecoinfoundation/attestation/compare/{{tag_name}}...HEAD", exactly = 1 },
]
