[package]
name = "mc-attestation-verifier"
version = "0.2.0"
authors = { workspace = true }
# See https://crates.io/category_slugs for valid categories
categories = ["authentication", "no-std"]
description = "SGX Enclave Attestation Report Verification"
edition = { workspace = true }
# See https://crates.io/keywords for the common keywords
keywords = ["no-std", "security"]
license = { workspace = true }
readme = "README.md"
repository = { workspace = true }
rust-version = { workspace = true }

[features]
mbedtls = ["dep:mbedtls"]

[dependencies]
der = { version = "0.7.7", default-features = false }
displaydoc = { version = "0.2.1", default-features = false }
hex = { version = "0.4.3", default-features = false, features = ["serde", "alloc"] }
mbedtls = { version = "0.8.1", default-features = false, features = ["no_std_deps"], optional = true }
mc-sgx-core-sys-types = "0.7.1"
mc-sgx-core-types = "0.7.1"
mc-sgx-dcap-types = { version = "0.7.1", default-features = false, features = ["tcb"] }
p256 = { version = "0.13.0", default-features = false, features = ["ecdsa"] }
serde = { version = "1.0.179", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.103", default-features = false, features = ["alloc", "raw_value"] }
subtle = { version = "2.4.0", default-features = false }
x509-cert = { version = "0.2.3", default-features = false, features = ["pem"] }

[dev-dependencies]
assert_matches = "1.5.0"
mc-sgx-dcap-sys-types = "0.7.1"
rand = "0.8.5"
textwrap = "0.16.0"
yare = "1.0.2"

# At least one crate must have this configuration
[package.metadata.release]
pre-release-replacements = [
    { file = "../CHANGELOG.md", search = "Unreleased", replace = "{{version}}", min = 1 },
    { file = "../CHANGELOG.md", search = "\\.\\.\\.HEAD", replace="...{{tag_name}}", exactly = 1 },
    { file = "../CHANGELOG.md", search = "ReleaseDate", replace= "{{date}}", min = 1 },
    { file = "../CHANGELOG.md", search = "<!-- next-header -->", replace="<!-- next-header -->\n## [Unreleased] - ReleaseDate\n", exactly = 1 },
    { file = "../CHANGELOG.md", search = "<!-- next-url -->", replace="<!-- next-url -->\n[Unreleased]: https://github.com/mobilecoinfoundation/attestation/compare/{{tag_name}}...HEAD", exactly = 1 },
]
